changed some colors

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                                 Sono Francesco De Stasio, sono un laureato in Informatica alla Federico II di Napoli, ho 23 anni e sono al secondo anno di Sicurezza Informatica all'Universita' di Salerno. Ho lavorato principalmente a progetti di App per smartphone sia in iOS che Android, ma anche alla creazione di librerie e progetti Software.
                             </p>
                         </div>
-                       <div class="right">
-                        <h1 class="title">Projects</h1>
+                       <div class="right" style= "margin-right: 100px; padding: 1%;">
+                        <h2 style="margin-bottom: 0.9em;">Projects</h1>
                                 <ul>
                                    <a href="https://www.behance.net/gallery/188265715/Nostos"><li>Nostos</li></a> 
                                    <a href="https://www.behance.net/gallery/174077767/Junky-Storm"><li>Junky</li></a> 
