now snake works always well

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Stusio">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Stusio web page with projects and life">
     <title>Stusio Portfolio</title>
     <link rel="icon" href="img/iconPage.png" type="image/x-icon">
